# fastapi-crash-course

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client.http  docker-compose.yml  pyproject.toml  render.yaml  render.yml
app/: main.py
app/core/: settings.py
app/products/: dtos.py  entity.py  repository.py  routes.py  service.py
