[project]
name = "fastapi-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.123.10",
  "gunicorn>=23.0.0",
  "pydantic>=2.12.5",
  "uv>=0.9.15",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["poethepoet>=0.38.0"]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
exclude = '''
(
  /(
      \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
